--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.hamburger-line {
+  @apply w-[30px] h-[2px] my-2 block bg-dark
+}
+.navbar-fixed{
+  @apply fixed z-[9999] bg-white bg-opacity-70;
+  backdrop-filter: blur(5px);
+  box-shadow: inset 0 -1px 0 0 rgba(0,0,0,0.2);
+}
+
+.hamburger-active > span:nth-child(1){
+  @apply rotate-45 
+}
+.hamburger-active > span:nth-child(2){
+  @apply scale-0
+}
+.hamburger-active > span:nth-child(3){
+  @apply -rotate-45 
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
